fix: ensure csrf token for first requests
