# apps/server/src/main/java/com/skkil/sync/config/SecurityConfig.java
@@ -57,6 +57,7 @@ public class SecurityConfig {
                         "/companies/**",
                         "/posts/**",
                         "/comments/**",
+                        "/csrf",
                         "/users/**",
                         "/team-building/**",
                         "/projects/**",
