# apps/server/src/main/java/com/skkil/sync/user/controller/AuthController.java
@@ -10,7 +10,9 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
+import org.springframework.security.web.csrf.CsrfToken;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -23,6 +25,12 @@ class AuthController {
 
   public AuthController(AuthService authService) {
     this.authService = authService;
+  }
+
+  @GetMapping("/csrf")
+  public CsrfToken getCsrfToken(CsrfToken csrfToken) {
+    csrfToken.getToken();
+    return csrfToken;
   }
 
   @PostMapping("/auth/login")
